made changes in baseClass for selenium grid